System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.08
Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: rB26bd5ebd42e3
Worked: (optional)
Short description of error
Mapping node data is missing or is not translated at all, correctly when I move my project from 2.80 to 2.81 official build.
Exact steps for others to reproduce the error
I'm using blender from years. Currently, I'm using EEVEE to preview the scene, which I'm developing for my company needs.
I had project including dynamic properties of data /DRIVERS/ attached to the MAPPING NODE in the Shader of an object.
- When I migrated from 2.80 to 2.81, drivers were broken into those Mapping nodes and I have had to built them from scratch, there is not a single node. I will not be able to reproduce the complete shader logic for few days including all drivers behavior if this data cannot be translated properly.
- When I try to open my progress to downgrade the project with current progress from 2.81 to 2.80, again mapping node is completely broken and cannot be recognized for some reason?
- I measured the performance between both versions between 2.80 and 2.81, and can conclude I had much better performance for some reason with the scene in 2.80, without changing anything. Even when I play the timeline, and move any of the attached driver properties, the fps in 2.81 is getting down drastically.
Please, check the previews I'm attaching here.
Here you can see the proper setup in 2.80
Here not recognized driver in the node, strage property type which is not giving much HINT what and how this shuld be re-build
Here when I try to downgrade from 2.81 to 2.80 with existing progress, I'm facing this issue - data for mapping node is not recognized at all
Guys, I'm looking for your support to succeed with the project. Thank you for everything you do!